Fix button spacing

--- a/stem-explorer-ng/src/app/components/challenge-details/challenge-details.component.scss
+++ b/stem-explorer-ng/src/app/components/challenge-details/challenge-details.component.scss
@@ -29,6 +29,12 @@
   font-size: 2rem;
 }
 
+app-button {
+  display: block;
+  padding: 0;
+  margin-bottom: 1rem;
+}
+
 @media only screen and (min-width: 768px) {
   .challenge-header {
     text-align: center;
